--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vite-project",
+  "name": "phyber",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Pradum Kumar Dubey",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
